# CoinGate

./: .gitignore  CMakeLists.txt  PROJECT_STATUS.md  README.md  coingate_clean.ino  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
main/: CMakeLists.txt  anti_abuse.c  anti_abuse.h  coin_acceptor.c  coin_acceptor.h  config_manager.c  config_manager.h  main.c  mikrotik_api.c  mikrotik_api.h  rate_config.c  rate_config.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
web_interface/: index.html  script.js  style.css
